--- a/NOVA/Views/Shared/_Layout_menu2.cshtml
+++ b/NOVA/Views/Shared/_Layout_menu2.cshtml
@@ -92,6 +92,11 @@
                         <div data-i18n="Without menu">Mal Kabul Formu</div>
                     </a>
                 </li>
+                <li class="menu-item" id="malkabulform" style="display: @ViewBag.DisplaySevkMalKabul">
+                    <a href="@Url.Action("SevkMalKabul", "Sevkiyat")" class="menu-link">
+                        <div data-i18n="Without menu">Sevk Mal Kabul Kayıt</div>
+                    </a>
+                </li>
             </ul>
 
         </li>
