--- a/NOVA/Views/Shared/_Layout_sevkiyat.cshtml
+++ b/NOVA/Views/Shared/_Layout_sevkiyat.cshtml
@@ -91,7 +91,7 @@
                                 <a class="nav-link dropdown-toggle hide-arrow" href="javascript:void(0);" data-bs-toggle="dropdown">
                                     <div class="avatar avatar-online">
                                         @{
-                                            string s = ViewBag.Id + ".png?" + DateTime.Now.Ticks.ToString();
+                                            string s = Request.Cookies["Id"].Value + ".png?" + DateTime.Now.Ticks.ToString();
                                         }
                                         <object data="/assets/img/avatars/@s" type="image/png" class="w-px-40 h-auto rounded-circle">
                                             <img src="/assets/img/avatars/7.png" class="w-px-40 h-auto rounded-circle">
